GosuParser.py
# Generated from GosuParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GosuParser ( Parser ):

    grammarFileName = "GosuParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "';'", "','", "<INVALID>", "'='", "'>'", 
                     "'<'", "'!'", "'~'", "'?'", "'?:'", "':'", "<INVALID>", 
                     "'<='", "<INVALID>", "'&&'", "'||'", "'++'", "'--'", 
                     "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", 
                     "'->'", "'@'", "<INVALID>", "'#'", "'\\'", "'+='", 
                     "'-='", "'*='", "'/='", "'&='", "'&&='", "<INVALID>", 
                     "'^='", "'%='", "'<<='", "'>>='", "'>>>='" ]

    symbolicNames = [ "<INVALID>", "ABSTRACT", "AND", "ANNOTATION", "AS", 
                      "ASSERT", "BLOCK", "BREAK", "CASE", "CATCH", "CLASS", 
                      "CONSTRUCT", "CONTINUE", "DEFAULT", "DELEGATE", "DO", 
                      "ELSE", "ENHANCEMENT", "ENUM", "EVAL", "EXTENDS", 
                      "FALSE", "FINAL", "FINALLY", "FOR", "FOREACH", "FUNCTION", 
                      "GET", "IF", "IMPLEMENTS", "IN", "INDEX", "INTERFACE", 
                      "INTERNAL", "ITERATOR", "NEW", "NOT", "OR", "OVERRIDE", 
                      "PACKAGE", "PRIVATE", "PROPERTY", "PROTECTED", "PUBLIC", 
                      "READONLY", "REIFIED", "REPRESENTS", "RETURN", "SET", 
                      "STATIC", "STATICTYPEOF", "STRUCTURE", "SUPER", "SWITCH", 
                      "THIS", "THROW", "TRANSIENT", "TRUE", "TRY", "TYPEAS", 
                      "TYPEIS", "TYPEOF", "USES", "USING", "VAR", "VOID", 
                      "WHILE", "NULL", "NAN", "INFINITY", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMICOLON", 
                      "COMMA", "DOT", "EQUALS", "GT", "LT", "EXCLAMATION", 
                      "TILDE", "QUESTION", "QUESTION_COLON", "COLON", "EQUAL", 
                      "LE", "NOTEQUAL", "CONJ", "DISJ", "INC", "DEC", "PLUS", 
                      "MINUS", "MUL", "DIV", "BITAND", "BITOR", "CARET", 
                      "MOD", "ARROW", "AT", "INTERVALOP", "HASH", "BACKSLASH", 
                      "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "AND_ASSIGN", "LOGICAL_AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", 
                      "MOD_ASSIGN", "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", 
                      "IDENTIFIER", "NumberLiteral", "CHAR_LITERAL", "OPEN_STRING_DQ", 
                      "OPEN_STRING_SQ", "WS", "COMMENT", "LINE_COMMENT", 
                      "DQ_INTERP", "DQ_TEXT", "CLOSE_STRING_DQ", "SQ_INTERP", 
                      "SQ_TEXT", "CLOSE_STRING_SQ" ]

    RULE_start = 0
    RULE_packageDeclaration = 1
    RULE_usesStatementList = 2
    RULE_usesStatement = 3
    RULE_usesFeatureLiteral = 4
    RULE_typeDeclaration = 5
    RULE_annotation = 6
    RULE_classDeclaration = 7
    RULE_classSignature = 8
    RULE_enhancementDeclaration = 9
    RULE_enhancementSignature = 10
    RULE_interfaceDeclaration = 11
    RULE_interfaceSignature = 12
    RULE_structureDeclaration = 13
    RULE_structureSignature = 14
    RULE_enumDeclaration = 15
    RULE_enumSignature = 16
    RULE_annotationDeclaration = 17
    RULE_annotationSignature = 18
    RULE_classBody = 19
    RULE_enhancementBody = 20
    RULE_interfaceBody = 21
    RULE_structureBody = 22
    RULE_enumBody = 23
    RULE_annotationBody = 24
    RULE_enumConstants = 25
    RULE_enumConstant = 26
    RULE_classMembers = 27
    RULE_enhancementMembers = 28
    RULE_interfaceMembers = 29
    RULE_structureMembers = 30
    RULE_annotationMembers = 31
    RULE_function = 32
    RULE_constructor = 33
    RULE_property = 34
    RULE_defaultValueFunction = 35
    RULE_functionSignature = 36
    RULE_constructorSignature = 37
    RULE_functionBody = 38
    RULE_statementBlock = 39
    RULE_statement = 40
    RULE_ifStatement = 41
    RULE_elseStatement = 42
    RULE_tryCatchFinallyStatement = 43
    RULE_catchClause = 44
    RULE_throwStatement = 45
    RULE_returnStatement = 46
    RULE_whileStatement = 47
    RULE_doWhileStatement = 48
    RULE_switchStatement = 49
    RULE_switchBlockStatement = 50
    RULE_caseOrDefaultStatement = 51
    RULE_usingStatement = 52
    RULE_assertStatement = 53
    RULE_localVarStatement = 54
    RULE_breakStatement = 55
    RULE_continueStatement = 56
    RULE_assignStatement = 57
    RULE_forEachStatement = 58
    RULE_finallyStatement = 59
    RULE_indexRest = 60
    RULE_indexVar = 61
    RULE_iteratorVar = 62
    RULE_propertySignature = 63
    RULE_field = 64
    RULE_delegate = 65
    RULE_delegateStatement = 66
    RULE_modifiers = 67
    RULE_classOrInterfaceType = 68
    RULE_parameterDeclarationList = 69
    RULE_parameterDeclaration = 70
    RULE_blockType = 71
    RULE_typeParameters = 72
    RULE_typeParameter = 73
    RULE_typeArguments = 74
    RULE_typeArgument = 75
    RULE_optionalType = 76
    RULE_typeLiteral = 77
    RULE_type = 78
    RULE_blockLiteral = 79
    RULE_blockLiteralArg = 80
    RULE_arguments = 81
    RULE_argExpression = 82
    RULE_namedArgumentExpression = 83
    RULE_expression = 84
    RULE_anonymousInnerClass = 85
    RULE_lambdaSignature = 86
    RULE_lambdaBody = 87
    RULE_arrayCreator = 88
    RULE_initializer = 89
    RULE_initializerExpression = 90
    RULE_arrayValueList = 91
    RULE_mapInitializerList = 92
    RULE_objectInitializer = 93
    RULE_initializerAssignment = 94
    RULE_primary = 95
    RULE_namespace = 96
    RULE_identifier = 97
    RULE_semicolon = 98
    RULE_literal = 99
    RULE_stringLiteral = 100
    RULE_stringPart = 101
    RULE_interpolation = 102
    RULE_numberLiteral = 103
    RULE_arrayLiteral = 104
    RULE_featureLiteral = 105
    RULE_booleanLiteral = 106
    RULE_mapLiteral = 107
    RULE_greaterEqual = 108

    ruleNames =  [ "start", "packageDeclaration", "usesStatementList", "usesStatement", 
                   "usesFeatureLiteral", "typeDeclaration", "annotation", 
                   "classDeclaration", "classSignature", "enhancementDeclaration", 
                   "enhancementSignature", "interfaceDeclaration", "interfaceSignature", 
                   "structureDeclaration", "structureSignature", "enumDeclaration", 
                   "enumSignature", "annotationDeclaration", "annotationSignature", 
                   "classBody", "enhancementBody", "interfaceBody", "structureBody", 
                   "enumBody", "annotationBody", "enumConstants", "enumConstant", 
                   "classMembers", "enhancementMembers", "interfaceMembers", 
                   "structureMembers", "annotationMembers", "function", 
                   "constructor", "property", "defaultValueFunction", "functionSignature", 
                   "constructorSignature", "functionBody", "statementBlock", 
                   "statement", "ifStatement", "elseStatement", "tryCatchFinallyStatement", 
                   "catchClause", "throwStatement", "returnStatement", "whileStatement", 
                   "doWhileStatement", "switchStatement", "switchBlockStatement", 
                   "caseOrDefaultStatement", "usingStatement", "assertStatement", 
                   "localVarStatement", "breakStatement", "continueStatement", 
                   "assignStatement", "forEachStatement", "finallyStatement", 
                   "indexRest", "indexVar", "iteratorVar", "propertySignature", 
                   "field", "delegate", "delegateStatement", "modifiers", 
                   "classOrInterfaceType", "parameterDeclarationList", "parameterDeclaration", 
                   "blockType", "typeParameters", "typeParameter", "typeArguments", 
                   "typeArgument", "optionalType", "typeLiteral", "type", 
                   "blockLiteral", "blockLiteralArg", "arguments", "argExpression", 
                   "namedArgumentExpression", "expression", "anonymousInnerClass", 
                   "lambdaSignature", "lambdaBody", "arrayCreator", "initializer", 
                   "initializerExpression", "arrayValueList", "mapInitializerList", 
                   "objectInitializer", "initializerAssignment", "primary", 
                   "namespace", "identifier", "semicolon", "literal", "stringLiteral", 
                   "stringPart", "interpolation", "numberLiteral", "arrayLiteral", 
                   "featureLiteral", "booleanLiteral", "mapLiteral", "greaterEqual" ]

    EOF = Token.EOF
    ABSTRACT=1
    AND=2
    ANNOTATION=3
    AS=4
    ASSERT=5
    BLOCK=6
    BREAK=7
    CASE=8
    CATCH=9
    CLASS=10
    CONSTRUCT=11
    CONTINUE=12
    DEFAULT=13
    DELEGATE=14
    DO=15
    ELSE=16
    ENHANCEMENT=17
    ENUM=18
    EVAL=19
    EXTENDS=20
    FALSE=21
    FINAL=22
    FINALLY=23
    FOR=24
    FOREACH=25
    FUNCTION=26
    GET=27
    IF=28
    IMPLEMENTS=29
    IN=30
    INDEX=31
    INTERFACE=32
    INTERNAL=33
    ITERATOR=34
    NEW=35
    NOT=36
    OR=37
    OVERRIDE=38
    PACKAGE=39
    PRIVATE=40
    PROPERTY=41
    PROTECTED=42
    PUBLIC=43
    READONLY=44
    REIFIED=45
    REPRESENTS=46
    RETURN=47
    SET=48
    STATIC=49
    STATICTYPEOF=50
    STRUCTURE=51
    SUPER=52
    SWITCH=53
    THIS=54
    THROW=55
    TRANSIENT=56
    TRUE=57
    TRY=58
    TYPEAS=59
    TYPEIS=60
    TYPEOF=61
    USES=62
    USING=63
    VAR=64
    VOID=65
    WHILE=66
    NULL=67
    NAN=68
    INFINITY=69
    LPAREN=70
    RPAREN=71
    LBRACE=72
    RBRACE=73
    LBRACK=74
    RBRACK=75
    SEMICOLON=76
    COMMA=77
    DOT=78
    EQUALS=79
    GT=80
    LT=81
    EXCLAMATION=82
    TILDE=83
    QUESTION=84
    QUESTION_COLON=85
    COLON=86
    EQUAL=87
    LE=88
    NOTEQUAL=89
    CONJ=90
    DISJ=91
    INC=92
    DEC=93
    PLUS=94
    MINUS=95
    MUL=96
    DIV=97
    BITAND=98
    BITOR=99
    CARET=100
    MOD=101
    ARROW=102
    AT=103
    INTERVALOP=104
    HASH=105
    BACKSLASH=106
    ADD_ASSIGN=107
    SUB_ASSIGN=108
    MUL_ASSIGN=109
    DIV_ASSIGN=110
    AND_ASSIGN=111
    LOGICAL_AND_ASSIGN=112
    OR_ASSIGN=113
    XOR_ASSIGN=114
    MOD_ASSIGN=115
    LSHIFT_ASSIGN=116
    RSHIFT_ASSIGN=117
    URSHIFT_ASSIGN=118
    IDENTIFIER=119
    NumberLiteral=120
    CHAR_LITERAL=121
    OPEN_STRING_DQ=122
    OPEN_STRING_SQ=123
    WS=124
    COMMENT=125
    LINE_COMMENT=126
    DQ_INTERP=127
    DQ_TEXT=128
    CLOSE_STRING_DQ=129
    SQ_INTERP=130
    SQ_TEXT=131
    CLOSE_STRING_SQ=132

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeDeclaration(self):
            return self.getTypedRuleContext(GosuParser.TypeDeclarationContext,0)


        def packageDeclaration(self):
            return self.getTypedRuleContext(GosuParser.PackageDeclarationContext,0)


        def usesStatementList(self):
            return self.getTypedRuleContext(GosuParser.UsesStatementListContext,0)


        def EOF(self):
            return self.getToken(GosuParser.EOF, 0)

        def getRuleIndex(self):
            return GosuParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = GosuParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 219
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 218
                self.packageDeclaration()


            self.state = 222
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==62:
                self.state = 221
                self.usesStatementList()


            self.state = 224
            self.typeDeclaration()
            self.state = 226
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 225
                self.match(GosuParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(GosuParser.PACKAGE, 0)

        def namespace(self):
            return self.getTypedRuleContext(GosuParser.NamespaceContext,0)


        def semicolon(self):
            return self.getTypedRuleContext(GosuParser.SemicolonContext,0)


        def getRuleIndex(self):
            return GosuParser.RULE_packageDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDeclaration" ):
                listener.enterPackageDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDeclaration" ):
                listener.exitPackageDeclaration(self)




    def packageDeclaration(self):

        localctx = GosuParser.PackageDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 228
            self.match(GosuParser.PACKAGE)
            self.state = 233
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 229
                self.namespace()
                self.state = 231
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==76:
                    self.state = 230
                    self.semicolon()




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsesStatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USES(self, i:int=None):
            if i is None:
                return self.getTokens(GosuParser.USES)
            else:
                return self.getToken(GosuParser.USES, i)

        def usesStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GosuParser.UsesStatementContext)
            else:
                return self.getTypedRuleContext(GosuParser.UsesStatementContext,i)


        def getRuleIndex(self):
            return GosuParser.RULE_usesStatementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsesStatementList" ):
                listener.enterUsesStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsesStatementList" ):
                listener.exitUsesStatementList(self)




    def usesStatementList(self):

        localctx = GosuParser.UsesStatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_usesStatementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 237 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 235
                self.match(GosuParser.USES)
                self.state = 236
                self.usesStatement()
                self.state = 239 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==62):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsesStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namespace(self):
            return self.getTypedRuleContext(GosuParser.NamespaceContext,0)


        def DOT(self):
            return self.getToken(GosuParser.DOT, 0)

        def MUL(self):
            return self.getToken(GosuParser.MUL, 0)

        def semicolon(self):
            return self.getTypedRuleContext(GosuParser.SemicolonContext,0)


        def usesFeatureLiteral(self):
            return self.getTypedRuleContext(GosuParser.UsesFeatureLiteralContext,0)


        def getRuleIndex(self):
            return GosuParser.RULE_usesStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsesStatement" ):
                listener.enterUsesStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsesStatement" ):
                listener.exitUsesStatement(self)




    def usesStatement(self):
